# magicangle-dashboard

./: .env.example  .gitignore  FRONTEND.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
app/: __init__.py  client.py  config.py  decoder.py  main.py  service.py
src/: api.ts  main.tsx  styles.css  types.ts
src/data/: normalize.ts  playbook.ts
tests/: test_decoder.py  test_service.py
